using Quoridor.Model.PlayerLogic;

namespace View.Scripts.UserInterface
{
    public static class GameModeTransmitter
    {
        public static GameMode GameMode { get; set; }
    }
}
